#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([progit2ja], [0.0.0], [30614168+matsuand@users.noreply.github.com])
AM_INIT_AUTOMAKE([-Wno-portability])

m4_include([m4/progs.m4])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
		 po4a/Makefile
		 po4a/images/Makefile
		 po4a/book/Makefile
		 po4a/book/01-introduction/Makefile
		 po4a/book/02-git-basics/Makefile
 		 po4a/book/03-git-branching/Makefile
 		 po4a/book/04-git-server/Makefile
 		 po4a/book/05-distributed-git/Makefile
 		 po4a/book/06-github/Makefile
 		 po4a/book/07-git-tools/Makefile
 		 po4a/book/08-customizing-git/Makefile
 		 po4a/book/09-git-and-other-scms/Makefile
 		 po4a/book/10-git-internals/Makefile
 		 po4a/book/A-git-in-other-environments/Makefile
 		 po4a/book/B-embedding-git/Makefile])
AC_OUTPUT
