THIS      = images

copy_images = \
	2fa-1.png \
	account-settings.png \
	advance-master.png \
	advance-master.svg \
	advance-testing.png \
	advance-testing.svg \
	areas.png \
	areas.svg \
	avatar-crop.png \
	basic-branching-1.png \
	basic-branching-1.svg \
	basic-branching-2.png \
	basic-branching-2.svg \
	basic-branching-3.png \
	basic-branching-3.svg \
	basic-branching-4.png \
	basic-branching-4.svg \
	basic-branching-5.png \
	basic-branching-5.svg \
	basic-branching-6.png \
	basic-branching-6.svg \
	basic-merging-1.png \
	basic-merging-1.svg \
	basic-merging-2.png \
	basic-merging-2.svg \
	basic-rebase-1.png \
	basic-rebase-1.svg \
	basic-rebase-2.png \
	basic-rebase-2.svg \
	basic-rebase-3.png \
	basic-rebase-3.svg \
	basic-rebase-4.png \
	basic-rebase-4.svg \
	benevolent-dictator.png \
	benevolent-dictator.svg \
	blink-01-start.png \
	blink-02-pr.png \
	blink-03-pull-request-open.png \
	blink-04-email.png \
	blink-04-pr-comment.png \
	blink-05-general-comment.png \
	blink-06-final.png \
	branch-and-history.png \
	branch-and-history.svg \
	branch_widget_mac.png \
	branch_widget_win.png \
	centralized.png \
	centralized.svg \
	centralized_workflow.png \
	checkout-master.png \
	checkout-master.svg \
	clean.png \
	clean.svg \
	collaborators.png \
	commit-and-tree.png \
	commit-and-tree.svg \
	commits-and-parents.png \
	commits-and-parents.svg \
	data-model-1.png \
	data-model-1.svg \
	data-model-2.png \
	data-model-2.svg \
	data-model-3.png \
	data-model-3.svg \
	data-model-4.png \
	data-model-4.svg \
	deltas.png \
	deltas.svg \
	distributed.png \
	distributed.svg \
	double-dot.png \
	double-dot.svg \
	email-settings.png \
	forkbutton.png \
	git-bash.png \
	git-diff-check.png \
	git-fusion-boot.png \
	git-fusion-perforce-graph.png \
	git-gui.png \
	git-instaweb.png \
	git-osx-installer.png \
	github_mac.png \
	github_win.png \
	gitk.png \
	gitlab-groups.png \
	gitlab-menu.png \
	gitlab-users.png \
	head-to-master.png \
	head-to-master.svg \
	head-to-testing.png \
	head-to-testing.svg \
	integration-manager.png \
	integration-manager.svg \
	interesting-rebase-1.png \
	interesting-rebase-1.svg \
	interesting-rebase-2.png \
	interesting-rebase-2.svg \
	interesting-rebase-3.png \
	interesting-rebase-3.svg \
	interesting-rebase-4.png \
	interesting-rebase-4.svg \
	interesting-rebase-5.png \
	interesting-rebase-5.svg \
	jb.png \
	large-merges-1.png \
	large-merges-1.svg \
	large-merges-2.png \
	large-merges-2.svg \
	lifecycle.png \
	lifecycle.svg \
	local.png \
	local.svg \
	lr-branches-1.png \
	lr-branches-1.svg \
	lr-branches-2.png \
	lr-branches-2.svg \
	maint-01-email.png \
	maint-02-merge.png \
	maint-03-email-resp.png \
	maint-04-target.png \
	maint-05-mentions.png \
	maint-06-unsubscribe.png \
	maint-07-notifications.png \
	maint-08-notifications-page.png \
	maint-09-contrib.png \
	maint-10-default-branch.png \
	maint-11-transfer.png \
	managed-team-1.png \
	managed-team-1.svg \
	managed-team-2.png \
	managed-team-2.svg \
	managed-team-3.png \
	managed-team-3.svg \
	managed-team-flow.png \
	managed-team-flow.svg \
	markdown-01-example.png \
	markdown-02-tasks.png \
	markdown-03-task-summary.png \
	markdown-04-fenced-code.png \
	markdown-05-quote.png \
	markdown-06-emoji-complete.png \
	markdown-07-emoji.png \
	markdown-08-drag-drop.png \
	mentions-01-syntax.png \
	mentions-02-render.png \
	mentions-03-closed.png \
	merging-workflows-1.png \
	merging-workflows-1.svg \
	merging-workflows-2.png \
	merging-workflows-2.svg \
	merging-workflows-3.png \
	merging-workflows-3.svg \
	merging-workflows-4.png \
	merging-workflows-4.svg \
	merging-workflows-5.png \
	merging-workflows-5.svg \
	new-repo.png \
	neworg.png \
	newrepo.png \
	newrepoform.png \
	orgs-01-page.png \
	orgs-02-teams.png \
	orgs-03-audit.png \
	p4merge.png \
	perils-of-rebasing-1.png \
	perils-of-rebasing-1.svg \
	perils-of-rebasing-2.png \
	perils-of-rebasing-2.svg \
	perils-of-rebasing-3.png \
	perils-of-rebasing-3.svg \
	perils-of-rebasing-4.png \
	perils-of-rebasing-4.svg \
	perils-of-rebasing-5.png \
	perils-of-rebasing-5.svg \
	posh-git.png \
	pr-01-fail.png \
	pr-02-merge-fix.png \
	public-small-1.png \
	public-small-1.svg \
	public-small-2.png \
	public-small-2.svg \
	public-small-3.png \
	public-small-3.svg \
	rebasing-1.png \
	rebasing-1.svg \
	rebasing-2.png \
	rebasing-2.svg \
	remote-branches-1.png \
	remote-branches-1.svg \
	remote-branches-2.png \
	remote-branches-2.svg \
	remote-branches-3.png \
	remote-branches-3.svg \
	remote-branches-4.png \
	remote-branches-4.svg \
	remote-branches-5.png \
	remote-branches-5.svg \
	replace1.png \
	replace1.svg \
	replace2.png \
	replace2.svg \
	replace3.png \
	replace3.svg \
	replace4.png \
	replace4.svg \
	replace5.png \
	replace5.svg \
	reposettingslink.png \
	rerere1.png \
	rerere1.svg \
	rerere2.png \
	rerere2.svg \
	rerere3.png \
	rerere3.svg \
	reset-checkout.png \
	reset-checkout.svg \
	reset-ex1.png \
	reset-ex1.svg \
	reset-ex2.png \
	reset-ex2.svg \
	reset-ex3.png \
	reset-ex3.svg \
	reset-ex4.png \
	reset-ex4.svg \
	reset-ex5.png \
	reset-ex5.svg \
	reset-ex6.png \
	reset-ex6.svg \
	reset-hard.png \
	reset-hard.svg \
	reset-mixed.png \
	reset-mixed.svg \
	reset-path1.png \
	reset-path1.svg \
	reset-path2.png \
	reset-path2.svg \
	reset-path3.png \
	reset-path3.svg \
	reset-soft.png \
	reset-soft.svg \
	reset-squash-r1.png \
	reset-squash-r1.svg \
	reset-squash-r2.png \
	reset-squash-r2.svg \
	reset-squash-r3.png \
	reset-squash-r3.svg \
	reset-start.png \
	reset-start.svg \
	reset-workflow.png \
	reset-workflow.svg \
	scripting-01-services.png \
	scripting-02-email-service.png \
	scripting-03-webhook.png \
	scripting-04-webhook-debug.png \
	scripting-05-access-token.png \
	scripting-06-comment.png \
	scripting-07-status.png \
	signup.png \
	small-team-1.png \
	small-team-1.svg \
	small-team-2.png \
	small-team-2.svg \
	small-team-3.png \
	small-team-3.svg \
	small-team-4.png \
	small-team-4.svg \
	small-team-5.png \
	small-team-5.svg \
	small-team-6.png \
	small-team-6.svg \
	small-team-7.png \
	small-team-7.svg \
	small-team-flow.png \
	small-team-flow.svg \
	smudge.png \
	smudge.svg \
	snapshots.png \
	snapshots.svg \
	ssh-keys.png \
	symbols.svg \
	topic-branches-1.png \
	topic-branches-1.svg \
	topic-branches-2.png \
	topic-branches-2.svg \
	two-branches.png \
	two-branches.svg \
	undomerge-reset.png \
	undomerge-reset.svg \
	undomerge-revert.png \
	undomerge-revert.svg \
	undomerge-revert2.png \
	undomerge-revert2.svg \
	undomerge-revert3.png \
	undomerge-revert3.svg \
	undomerge-start.png \
	undomerge-start.svg \
	your-profile.png \
	zsh-oh-my.png \
	zsh-prompt.png
copy_images_path = $(addprefix $(top_srcdir)/docs/images/,$(copy_images))

all: $(copy_images_path)

stat: ;

-include copy_images.sub
copy_images.sub: $(top_srcdir)/build-aux/create_copy_recipe.sh $(top_builddir)/config.log
	@$(SHELL) $(top_srcdir)/build-aux/create_copy_recipe.sh $@ @abs_origdir@/$(THIS) $(top_srcdir)/docs/images $(copy_images)
